mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_missing_digit.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Expected digit after decimal point
--> test_scripts/error_cases/lexer_missing_digit.mux:2:11
   |
 2 | auto f = 1.
   |           ^
